@@ -29,53 +29,55 @@
       <para>
       The somewhat incomplete list of contributors includes (in alphabetical order):
       <itemizedlist>
-<listitem><para>Alexandre Duret-Lutz</para></listitem>
-<listitem><para>Alexander Bogdashevsky</para></listitem>
-<listitem><para>Alexander Roitman</para></listitem>
-<listitem><para>Arkadiusz Lipiec</para></listitem>
-<listitem><para>Bernd Felsche</para></listitem>
-<listitem><para>David R. Hampton</para></listitem>
-<listitem><para>Bernd Schandl</para></listitem>
-<listitem><para>Billy C. Earney</para></listitem>
-<listitem><para>Bruce J. DeGrasse</para></listitem>
-<listitem><para>Donald A. Peterson</para></listitem>
-<listitem><para>Douglas S. Blank</para></listitem>
-<listitem><para>Eero Tamminen</para></listitem>
-<listitem><para>Egyeki Gergely</para></listitem>
-<listitem><para>Frederick Noronha</para></listitem>
-<listitem><para>Frode Jemtland</para></listitem>
-<listitem><para>Gary Shao</para></listitem>
-<listitem><para>Greg Kuperberg</para></listitem>
-<listitem><para>Guillaume Pratte</para></listitem>
-<listitem><para>James Treacy</para></listitem>
-<listitem><para>Jason Salaz</para></listitem>
-<listitem><para>Jeffrey C. Ollie</para></listitem>
+
+<listitem><para>Larry Allingham</para></listitem>
 <listitem><para>Jens Arvidsson</para></listitem>
-<listitem><para>Jesper Zedlitz</para></listitem>
-<listitem><para>Jim Smart</para></listitem>
-<listitem><para>Julio Sanchez</para></listitem>
-<listitem><para>Lars Kr. Lundin</para></listitem>
-<listitem><para>Laurent Protois</para></listitem>
-<listitem><para>Leonid Mamtchenkov</para></listitem>
-<listitem><para>Lorenzo Cappelletti</para></listitem>
 <listitem><para>Marcos Bedinelli</para></listitem>
-<listitem><para>Martin Hawlisch</para></listitem>
-<listitem><para>Martin Senftleben</para></listitem>
-<listitem><para>Matthieu Pupat</para></listitem>
-<listitem><para>Michel Guitel</para></listitem>
-<listitem><para>Nathan Bullock</para></listitem>
-<listitem><para>Pier Luigi Cinquantini</para></listitem>
-<listitem><para>Radek Malcic</para></listitem>
+<listitem><para>Douglas S. Blank</para></listitem>
 <listitem><para>Radu Bogdan Mare</para></listitem>
+<listitem><para>Alexander Bogdashevsky</para></listitem>
 <listitem><para>Richard Bos</para></listitem>
-<listitem><para>Richard Taylor</para></listitem>
-<listitem><para>Samuel Tardieu</para></listitem>
-<listitem><para>Sebastian Voecking</para></listitem>
+<listitem><para>Nathan Bullock</para></listitem>
+<listitem><para>Lorenzo Cappelletti</para></listitem>
+<listitem><para>Pier Luigi Cinquantini</para></listitem>
+<listitem><para>Bruce J. DeGrasse</para></listitem>
+<listitem><para>Alexandre Duret-Lutz</para></listitem>
+<listitem><para>Billy C. Earney</para></listitem>
+<listitem><para>Bernd Felsche</para></listitem>
+<listitem><para>Egyeki Gergely</para></listitem>
+<listitem><para>Michel Guitel</para></listitem>
 <listitem><para>Steve Hall</para></listitem>
-<listitem><para>Steve Swales</para></listitem>
-<listitem><para>Tim Waugh</para></listitem>
+<listitem><para>David R. Hampton</para></listitem>
+<listitem><para>Martin Hawlisch</para></listitem>
+<listitem><para>Frode Jemtland</para></listitem>
+<listitem><para>Greg Kuperberg</para></listitem>
+<listitem><para>Arkadiusz Lipiec</para></listitem>
+<listitem><para>Lars Kr. Lundin</para></listitem>
+<listitem><para>Radek Malcic</para></listitem>
+<listitem><para>Leonid Mamtchenkov</para></listitem>
 <listitem><para>Tino Meinen</para></listitem>
+<listitem><para>Frederick Noronha</para></listitem>
+<listitem><para>Jeffrey C. Ollie</para></listitem>
+<listitem><para>Donald A. Peterson</para></listitem>
+<listitem><para>Guillaume Pratte</para></listitem>
+<listitem><para>Laurent Protois</para></listitem>
+<listitem><para>Matthieu Pupat</para></listitem>
+<listitem><para>Alexander Roitman</para></listitem>
+<listitem><para>Jason Salaz</para></listitem>
+<listitem><para>Julio Sanchez</para></listitem>
+<listitem><para>Bernd Schandl</para></listitem>
+<listitem><para>Martin Senftleben</para></listitem>
+<listitem><para>Gary Shao</para></listitem>
+<listitem><para>Jim Smart</para></listitem>
+<listitem><para>Steve Swales</para></listitem>
+<listitem><para>Eero Tamminen</para></listitem>
+<listitem><para>Samuel Tardieu</para></listitem>
+<listitem><para>Richard Taylor</para></listitem>
+<listitem><para>James Treacy</para></listitem>
+<listitem><para>Sebastian Voecking</para></listitem>
 <listitem><para>Xing Wang</para></listitem>
+<listitem><para>Tim Waugh</para></listitem>
+<listitem><para>Jesper Zedlitz</para></listitem>
       </itemizedlist>
 If you know of somebody else who should be listed here, please let us know.
       </para>
